@@ -1,5 +1,7 @@
 Latest CVS changes - 10/01/08:
   - Added support for MPEG-4 over MPEG-2 TS in mp42ts (MPEG-4 SL in MPEG-2 PES)
+  - Added support for MPEG-4 AAC/LOAS/LATM/ over MPEG-2 TS for import in ISO Media and in the player. 
+      Only basic DVB config is supported for LATM 
   - Fixed support for AVC/H264 over MPEG-2 TS import in ISO Media and in the player. Only one PPS/SPS is allowed 
   - Added support for offscreen GL rendering on symbian using PBuffers
   - SVG fonts should now be quite stable, but does not support kerning
